updated project code and documentation version 2

--- a/COMPAS Risk Assessment.ipynb
+++ b/COMPAS Risk Assessment.ipynb
@@ -225,7 +225,7 @@
    "cell_type": "code",
    "execution_count": 229,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -558,6 +558,26 @@
    ],
    "source": [
     "compas_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 579,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2103"
+      ]
+     },
+     "execution_count": 579,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(compas_stats[compas_stats['race'] == 'Caucasian']['total_count'])"
    ]
   },
   {
